--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>vue-timepickr</title>
+    <style type="text/css">
+      html {
+        height: 100%;
+      }
+      body {
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+    </style>
   </head>
   <body>
-    <app></app>
+    <timepicker></timepicker>
     <!-- built files will be auto injected -->
   </body>
 </html>
