Styles added and font chnages

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>vue-timepickr</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <style type="text/css">
       html {
         height: 100%;
@@ -12,6 +13,8 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        font-family: 'Open Sans', sans-serif;
+        background: #f3f3f3;
       }
     </style>
   </head>
