Added possibility to move left and right with arrows keys. Also filtering number based on currently value (hour/minutes)

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </style>
   </head>
   <body>
-    <timepicker></timepicker>
+    <timepicker value="12:20"></timepicker>
     <!-- built files will be auto injected -->
   </body>
 </html>
