Added number animation on change

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         font-family: 'Open Sans', sans-serif;
         background: #f3f3f3;
       }
+      input {
+        font-family: 'Open Sans', sans-serif;
+      }
     </style>
   </head>
   <body>
