--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>vue-timepickr</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <style type="text/css">
@@ -22,7 +23,7 @@
     </style>
   </head>
   <body>
-    <timepicker :value.sync="time"></timepicker>
+    <timepicker v-model="time"></timepicker>
     <!-- built files will be auto injected -->
   </body>
 </html>
