Updated Vue to 2.0.5 and fixed couple bugs

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     </style>
   </head>
   <body>
-    <timepicker v-model="time"></timepicker>
+    <div id="app">
+      <timepicker v-model="time"></timepicker>
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
